--- a/app/globals.css
+++ b/app/globals.css
@@ -50,3 +50,18 @@
   transition-delay: .2s;
   display: none;
 }
+
+.shadow_green {
+  box-shadow: 0 0 10px green,
+  0 0 20px green;
+}
+
+.shadow_red {
+  box-shadow: 0 0 10px red,
+  0 0 20px red;
+}
+
+.shadow_blue {
+  box-shadow: 0 0 10px blue,
+  0 0 20px blue;
+}
